src/objects/IP_Status__c.object
<CustomObject>
    <description>Statuses associated to idea platform zones.</description>
    <fields>
        <fullName>Display_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Display Order is used to sort the list of status in a particular order</description>
        <inlineHelpText>Display Order is used to sort the list of status in a particular order</inlineHelpText>
        <label>Display Order</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Initial_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The status set automatically on a newly created idea.  A zone should only have one initial status.</description>
        <label>Initial Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lock_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status that represents the end of the lifecycle of an idea.  Many status can be lock status.</description>
        <label>Lock Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Threshold_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The status the idea is set to when the point threshold is reached.  A zone should only have one threshold status.</description>
        <label>Threshold Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <description>Used to filter the status list on the idea page.</description>
        <label>Zone</label>
        <referenceTo>IP_Zone__c</referenceTo>
        <relationshipLabel>Statuses</relationshipLabel>
        <relationshipName>Statuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Zone__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Initial_Status__c</columns>
        <columns>Lock_Status__c</columns>
        <columns>Threshold_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>